Enhance project structure and add new features
- Updated `.gitignore` to include additional file types for better exclusion during builds.
- Added `argon2` dependency for password hashing in `Cargo.toml` and `Cargo.lock`.
- Introduced a new `QUICK_START.md` guide for testing the full authentication system.
- Refactored `localup-api` to include middleware for JWT authentication and improved error handling in token management.
- Added new entities and migrations for `auth_token`, `custom_domain`, and `team` in `localup-relay-db`.
- Enhanced CLI with configuration management and improved logging for better user experience.
- Updated webapp components and pages for the exit node portal, including authentication and dashboard functionalities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,7 +87,7 @@ rustls-pemfile = "2.0"
 webpki-roots = "0.26"
 
 # ACME/Let's Encrypt
-instant-acme = "0.4"
+instant-acme = "0.8"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -106,6 +106,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Authentication
 jsonwebtoken = "9.2"
 base64 = "0.21"
+argon2 = { version = "0.5", features = ["std"] }
 
 # CLI
 clap = { version = "4.4", features = ["derive", "env"] }
