--- a/crates/localup-api/Cargo.toml
+++ b/crates/localup-api/Cargo.toml
@@ -12,6 +12,7 @@ localup-control = { path = "../localup-control" }
 localup-proto = { path = "../localup-proto" }
 localup-auth = { path = "../localup-auth" }
 localup-relay-db = { path = "../localup-relay-db" }
+localup-cert = { path = "../localup-cert" }
 
 # Web framework
 axum = { workspace = true }
@@ -36,6 +37,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
+base64 = "0.22"
 
 # Database
 sea-orm = { workspace = true }
@@ -44,5 +46,10 @@ sea-orm = { workspace = true }
 rust-embed = "8.5.0"
 mime_guess = "2.0"
 
+# Cryptography
+sha2 = "0.10"
+
 [dev-dependencies]
 tokio = { workspace = true }
+sea-orm-migration = { workspace = true }
+tower = { workspace = true }
