--- a/crates/localup-cert/Cargo.toml
+++ b/crates/localup-cert/Cargo.toml
@@ -28,6 +28,7 @@ chrono = { workspace = true }
 
 # Serialization
 serde = { workspace = true }
+base64 = "0.22"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
