--- a/crates/localup-auth/Cargo.toml
+++ b/crates/localup-auth/Cargo.toml
@@ -9,6 +9,7 @@ authors.workspace = true
 # Authentication
 jsonwebtoken = { workspace = true }
 base64 = { workspace = true }
+argon2 = { workspace = true }
 
 # Serialization
 serde = { workspace = true }
