--- a/crates/localup-control/Cargo.toml
+++ b/crates/localup-control/Cargo.toml
@@ -11,6 +11,7 @@ localup-auth = { path = "../localup-auth" }
 localup-router = { path = "../localup-router" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
+localup-relay-db = { path = "../localup-relay-db" }
 tokio = { workspace = true, features = ["sync"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
@@ -18,6 +19,9 @@ bincode = { workspace = true }
 async-trait = { workspace = true }
 dashmap = "6.1"
 chrono = { workspace = true }
+sea-orm = { workspace = true }
+sha2 = "0.10"
+uuid = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
