--- a/crates/localup-server-https/Cargo.toml
+++ b/crates/localup-server-https/Cargo.toml
@@ -12,6 +12,7 @@ localup-cert = { path = "../localup-cert" }
 localup-control = { path = "../localup-control" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
+localup-relay-db = { path = "../localup-relay-db" }
 tokio = { workspace = true }
 tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
 rustls = { version = "0.23", default-features = false, features = ["ring"] }
@@ -21,6 +22,7 @@ http = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 rand = "0.8"
+sea-orm = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
