--- a/webapps/exit-node-portal/package.json
+++ b/webapps/exit-node-portal/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@hey-api/client-fetch": "^0.13.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@hey-api/openapi-ts": "^0.85.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^24.6.0",
@@ -26,11 +28,15 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
