Update localup-api and exit-node-portal with new features and improvements
- Added support for including inactive tunnels in the API response.
- Refactored JWT token generation to use a configurable secret, enhancing security.
- Introduced new CLI options for auto-creating admin users on startup.
- Updated exit-node-portal to utilize @tanstack/react-query for data fetching.
- Enhanced UI components and added a new TunnelDetail page for better user experience.
- Improved error handling and logging in various components.
- Updated dependencies in Cargo.lock and package.json for better performance and stability.

--- a/webapps/exit-node-portal/package.json
+++ b/webapps/exit-node-portal/package.json
@@ -8,11 +8,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate:api": "openapi-ts",
+    "generate:api": "openapi-ts && ./scripts/fix-api-client.sh",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.13.1",
+    "@tanstack/react-query": "^5.90.10",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.6"
