--- a/crates/localup-server-tcp-proxy/Cargo.toml
+++ b/crates/localup-server-tcp-proxy/Cargo.toml
@@ -17,3 +17,4 @@ tracing = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 sea-orm = { workspace = true }
+socket2 = "0.5"
