--- a/webapps/exit-node-portal/.env
+++ b/webapps/exit-node-portal/.env
@@ -1,2 +1,3 @@
 # API Base URL for the LocalUp Exit Node
-VITE_API_BASE_URL=http://localhost:13080
+# Empty since we use Vite proxy in development
+VITE_API_BASE_URL=
