Refactor exit-node-portal to utilize @tanstack/react-query for API interactions
- Replaced direct API calls with @tanstack/react-query hooks for fetching user data, auth tokens, and team information, improving data management and state handling.
- Introduced logout functionality and updated authentication flows to enhance user experience.
- Removed legacy utility functions for API interactions, streamlining the codebase.
- Updated package.json scripts for building web applications and adjusted README instructions for generating API types.
- Enhanced error handling and loading states across various components for better user feedback.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,14 @@ jobs:
       - name: Build dashboard webapp
         run: |
           cd webapps/dashboard
+          export VITE_API_BASE_URL=""
           bun install
           bun run build
 
       - name: Build exit-node-portal webapp
         run: |
           cd webapps/exit-node-portal
+          export VITE_API_BASE_URL=""
           bun install
           bun run build
 
