Add multi-transport support with protocol discovery and new transport options
- Introduced support for multiple transport protocols (QUIC, WebSocket, HTTP/2) to enhance connectivity options.
- Implemented a protocol discovery endpoint for clients to fetch available transport protocols dynamically.
- Updated the API and client configurations to include preferred transport options, allowing users to specify their desired protocol.
- Enhanced the README.md with new sections detailing multi-transport options and usage examples.
- Refactored existing components to accommodate the new transport features and improve overall error handling.
- Added new transport-related crates for WebSocket and HTTP/2 implementations, ensuring compatibility with existing systems.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ members = [
     "crates/localup-relay-db",
     "crates/localup-transport",
     "crates/localup-transport-quic",
+    "crates/localup-transport-websocket",
+    "crates/localup-transport-h2",
     "crates/localup-agent",
     "crates/localup-agent-server",
 ]
