--- a/crates/localup-cli/Cargo.toml
+++ b/crates/localup-cli/Cargo.toml
@@ -25,6 +25,8 @@ localup-server-tcp-proxy = { path = "../localup-server-tcp-proxy" }
 localup-server-tls = { path = "../localup-server-tls" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
+localup-transport-websocket = { path = "../localup-transport-websocket" }
+localup-transport-h2 = { path = "../localup-transport-h2" }
 localup-relay-db = { path = "../localup-relay-db" }
 tokio = { workspace = true }
 clap = { workspace = true }
