--- a/crates/localup-proto/Cargo.toml
+++ b/crates/localup-proto/Cargo.toml
@@ -5,11 +5,18 @@ edition.workspace = true
 license.workspace = true
 authors.workspace = true
 
+[features]
+default = []
+openapi = ["utoipa"]
+
 [dependencies]
 # Serialization
 serde = { workspace = true }
 serde_json = { workspace = true }
 bincode = { workspace = true }
+
+# OpenAPI (optional)
+utoipa = { workspace = true, optional = true }
 
 # Utilities
 bytes = { workspace = true }
