HTTP relay basic authentication (vibe-kanban 94f38f24)
As a user I want to be able to add basic authentication when doing this

 localup --relay=tunnel.kfs.es:4443  --port=3000 --token=$TOKEN --subdomain="usesend"

Adding arguments like ngrok has for basic authentication

design the authentication module so that in the future we can add more types of authentication such as:

- OIDC
- Token header

And similar, without changing the main logic, but via traits and differt implementations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/localup-client",
     "crates/localup-connection",
     "crates/localup-auth",
+    "crates/localup-http-auth",  # HTTP authentication middleware for tunnels
     "crates/localup-router",
     "crates/localup-server-tcp",
     "crates/localup-server-tcp-proxy",
