--- a/crates/localup-server-https/Cargo.toml
+++ b/crates/localup-server-https/Cargo.toml
@@ -13,6 +13,7 @@ localup-control = { path = "../localup-control" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
 localup-relay-db = { path = "../localup-relay-db" }
+localup-http-auth = { path = "../localup-http-auth" }
 tokio = { workspace = true }
 tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
 rustls = { version = "0.23", default-features = false, features = ["ring"] }
