--- a/sdks/nodejs/package.json
+++ b/sdks/nodejs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@localup/sdk",
   "version": "0.1.0",
-  "description": "LocalUp tunnel client SDK for Node.js",
+  "description": "LocalUp tunnel client SDK for Node.js - expose local servers through secure tunnels",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -20,12 +20,15 @@
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node && bun run build:types",
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist",
+    "build:cjs": "bun build ./src/index.ts --outfile ./dist/index.cjs --target node --format cjs",
+    "build:all": "bun run clean && bun run build && bun run build:cjs",
     "dev": "bun --watch src/index.ts",
     "test": "bun test",
     "lint": "biome check src",
     "format": "biome format --write src",
     "clean": "rm -rf dist",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build:all",
+    "version": "echo \"Version: $npm_package_version\""
   },
   "keywords": [
     "tunnel",
@@ -33,13 +36,26 @@
     "ngrok",
     "quic",
     "http2",
-    "websocket"
+    "websocket",
+    "expose",
+    "localhost",
+    "port-forwarding",
+    "reverse-proxy"
   ],
-  "author": "",
+  "author": "LocalUp <dev@localup.dev>",
   "license": "MIT",
+  "homepage": "https://github.com/localup-dev/localup/tree/main/sdks/nodejs#readme",
+  "bugs": {
+    "url": "https://github.com/localup-dev/localup/issues"
+  },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/localup-dev/localup.git",
+    "directory": "sdks/nodejs"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
