--- a/crates/localup-server-tcp/Cargo.toml
+++ b/crates/localup-server-tcp/Cargo.toml
@@ -14,6 +14,7 @@ localup-control = { path = "../localup-control" }
 localup-relay-db = { path = "../localup-relay-db" }
 localup-transport = { path = "../localup-transport" }
 localup-transport-quic = { path = "../localup-transport-quic" }
+localup-http-auth = { path = "../localup-http-auth" }
 
 # Async runtime
 tokio = { workspace = true, features = ["net", "io-util", "sync"] }
