--- a/crates/localup-server-https/Cargo.toml
+++ b/crates/localup-server-https/Cargo.toml
@@ -24,6 +24,10 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 rand = "0.8"
 sea-orm = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
+base64 = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
