--- a/crates/localup-cert/Cargo.toml
+++ b/crates/localup-cert/Cargo.toml
@@ -25,9 +25,11 @@ tokio = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 chrono = { workspace = true }
+uuid = { workspace = true }
 
 # Serialization
 serde = { workspace = true }
+serde_json = { workspace = true }
 base64 = "0.22"
 
 [dev-dependencies]
