Implement ACME challenge handling and domain management features
- Added support for both HTTP-01 and DNS-01 challenges in the ACME client.
- Introduced new API endpoints for managing domain challenges, including initiating, canceling, and restarting challenges.
- Enhanced the domain management UI to allow users to add domains and view challenge statuses.
- Updated database schema to include a new `domain_challenges` table for storing challenge information.
- Improved error handling and user feedback during domain provisioning processes.
- Refactored related components and API client to accommodate new features and ensure seamless integration.

--- a/crates/localup-api/Cargo.toml
+++ b/crates/localup-api/Cargo.toml
@@ -26,6 +26,7 @@ utoipa-swagger-ui = { workspace = true }
 
 # Async
 tokio = { workspace = true }
+futures = { workspace = true }
 
 # TLS
 rustls = { workspace = true }
@@ -52,6 +53,13 @@ mime_guess = "2.0"
 
 # Cryptography
 sha2 = "0.10"
+x509-parser = "0.16"
+
+# HTTP client for pre-validation
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+
+# DNS resolver for pre-validation
+hickory-resolver = "0.24"
 
 [dev-dependencies]
 tokio = { workspace = true }
