Enhance CI workflow and build process to support version extraction
- Added a step in the GitHub Actions workflow to extract the version from the Git tag and set it as an output variable.
- Updated the `build.rs` file to prioritize the `LOCALUP_VERSION` environment variable for versioning, falling back to the latest Git tag or the Cargo.toml version if not set.
- Ensured the build process can detect changes in the `LOCALUP_VERSION` environment variable to trigger rebuilds.

Signed-off-by: David Viejo <dviejo@kungfusoftware.es>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Extract version from tag
+        id: get_version
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+        shell: bash
+
       - name: Download webapp artifacts
         uses: actions/download-artifact@v4
         with:
@@ -142,6 +149,7 @@ jobs:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: ${{ matrix.cross == true && 'aarch64-linux-gnu-gcc' || '' }}
           CC_aarch64_unknown_linux_gnu: ${{ matrix.cross == true && 'aarch64-linux-gnu-gcc' || '' }}
           AR_aarch64_unknown_linux_gnu: ${{ matrix.cross == true && 'aarch64-linux-gnu-ar' || '' }}
+          LOCALUP_VERSION: ${{ steps.get_version.outputs.VERSION }}
         run: |
           cargo build --release --target ${{ matrix.target }} -p localup-cli
 
