--- a/crates/localup-cli/Cargo.toml
+++ b/crates/localup-cli/Cargo.toml
@@ -38,6 +38,8 @@ rustls = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 dirs = "5.0"
+serde_yaml = "0.9"
+regex-lite = "0.1"
 uuid = { version = "1.0", features = ["v4"] }
 ipnetwork = "0.20"
 chrono = { workspace = true }
