--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "crates/localup-transport-h2",
     "crates/localup-agent",
     "crates/localup-agent-server",
+    "apps/localup-desktop/src-tauri",  # Desktop application
 ]
 
 resolver = "2"
