Implement daemon functionality and enhance tunnel management
- Introduced a new daemon service that runs independently of the Tauri app, managing tunnels in the background.
- Added commands for the Tauri app to interact with the daemon, including starting, stopping, and deleting tunnels.
- Enhanced the UI to support detailed tunnel views and metrics, allowing users to monitor tunnel status and performance.
- Updated the database schema to include supported protocols for relays, enabling more flexible tunnel configurations.
- Improved the overall architecture to facilitate better communication between the app and the daemon, ensuring a seamless user experience.

This update significantly enhances the application's capabilities for managing tunnels and improves user interaction with the daemon service.

Signed-off-by: David Viejo <dviejo@kungfusoftware.es>

--- a/apps/localup-desktop/src-tauri/Cargo.toml
+++ b/apps/localup-desktop/src-tauri/Cargo.toml
@@ -4,10 +4,16 @@ version = "0.1.0"
 description = "LocalUp Desktop - Cross-platform tunnel management"
 authors = ["LocalUp Team"]
 edition = "2021"
+default-run = "localup-desktop"
 
 [lib]
 name = "localup_desktop_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
+
+# Daemon binary - runs independently of the GUI app
+[[bin]]
+name = "localup-daemon"
+path = "src/bin/daemon.rs"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
@@ -39,6 +45,11 @@ thiserror = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 async-trait = "0.1"
+png = "0.17"
+
+# Unix process management (for daemon)
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
 
 [features]
 default = ["custom-protocol"]
