--- a/apps/localup-desktop/src-tauri/Cargo.toml
+++ b/apps/localup-desktop/src-tauri/Cargo.toml
@@ -46,6 +46,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 async-trait = "0.1"
 png = "0.17"
+regex = "1"
 
 # Unix process management (for daemon)
 [target.'cfg(unix)'.dependencies]
