Refactor CI and release workflows to streamline webapp artifact handling
- Removed the installation and build steps for Bun in the CI workflow, simplifying the process.
- Added steps to download webapp artifacts in both CI and release workflows, ensuring consistent access to built assets.
- Enhanced the logging of IPC server endpoint in the daemon for better clarity and debugging.
- Introduced a new method in the IPC server to provide a cross-platform compatible endpoint string.

This update improves the efficiency of the CI process and enhances the IPC logging for better diagnostics.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,17 +83,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Build dashboard webapp
-        run: |
-          cd webapps/dashboard
-          bun install
-          bun run build
-
       - name: Download webapp artifacts
         uses: actions/download-artifact@v4
         with:
@@ -127,16 +116,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Download webapp artifacts
+        uses: actions/download-artifact@v4
         with:
-          bun-version: latest
-
-      - name: Build dashboard webapp
-        run: |
-          cd webapps/dashboard
-          bun install
-          bun run build
+          name: webapps-ci
+          path: webapps/
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -166,16 +150,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Build dashboard webapp
-        run: |
-          cd webapps/dashboard
-          bun install
-          bun run build
       - name: Download webapp artifacts
         uses: actions/download-artifact@v4
         with:
@@ -199,12 +173,18 @@ jobs:
 
   cli-e2e:
     name: CLI E2E Tests
-    needs: build
+    needs: [build, build-webapps]
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Download webapp artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: webapps-ci
+          path: webapps/
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
